--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
@@ -167,12 +167,15 @@
                                 <td  class="editable-cell">{{i.quantity}}</td>
                                 <td  class="editable-cell machine-name" data-id="{{i.consume_place.id}}" data-machinecode="{{i.consume_place.assetCode}}">{{i.consume_place.assetName}}</td>
                                 <td  class="editable-cell description" data-id="">{{i.description}}</td>
-
                                 <td  class="editable-cell " data-id="">
+
+                                {% if request.user|in_group:"director" %}
                                     <button type="button" class="btn btn-history btn-sm" onclick="showHistory({{i.item_name.id}}, '{{i.item_name.partName}}')">
                                         <i class="fa fa-history"></i> مشاهده سابقه
                                     </button>
-                                </td>
+                                {% endif %}
+                            </td>
+
                                 
                                 
                                 
